Fix vxmq-node error