@@ -14,77 +14,4 @@
     <module>vxmq-admin</module>
   </modules>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>jib-maven-plugin</artifactId>
-        <version>${jib-maven-plugin.version}</version>
-        <configuration>
-          <allowInsecureRegistries>true</allowInsecureRegistries>
-          <from>
-            <image>jpforevers/myjavabase:17</image>
-          </from>
-          <to>
-            <image>jpforevers/${project.artifactId}</image>
-            <tags>
-              <tag>${project.version}</tag>
-            </tags>
-          </to>
-          <extraDirectories>
-            <paths>
-              <path>
-                <from>docker</from>
-                <into>/root/.ssh/</into>
-                <includes>config</includes>
-              </path>
-            </paths>
-          </extraDirectories>
-          <container>
-            <workingDirectory>/vxmq</workingDirectory>
-            <mainClass>${launcher.class}</mainClass>
-            <appRoot>/vxmq/app</appRoot>
-            <!-- From https://ignite.apache.org/docs/latest/quick-start/java#running-ignite-with-java-11-or-later -->
-            <jvmFlags>
-              <jvmFlag>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.io=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.math=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.sql/java.sql=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.time=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.text=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.management/sun.management=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</jvmFlag>
-            </jvmFlags>
-            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-            <ports>
-              <port>8060/tcp</port>
-              <port>1883/tcp</port>
-              <port>47500/tcp</port>
-            </ports>
-            <environment>
-              <IGNITE_HOME>/vxmq/ignite</IGNITE_HOME>
-              <VXMQ_LOGS_DIR>/vxmq/logs</VXMQ_LOGS_DIR>
-            </environment>
-          </container>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
 </project>
